fix assertion about the mismatch of frame types by not making blind assumptions, b=355986, r=bernd, sr=bzbarsky